--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.6",
     "copyfiles": "^2.4.0",
     "cross-env": "^7.0.2",
     "electron": "^10.1.3",
     "electron-builder": "^22.8.1",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "lodash.debounce": "^4.0.8"
   }
 }
